# Atheon-AI

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  docker-compose.backend.yml  docker-compose.yaml  docker-compose.yml
.cursor/rules/: atheonai-naming-convention.mdc  file-structure.mdc  languages-libraries.mdc  project-development-roadmap.mdc  project-rules.mdc  project-summary-description.mdc
.github/workflows/: doppler-sync.yaml  orchestrator-ci-cd.yaml
backend/agents/data_fetcher/: Cargo.toml  Dockerfile
backend/agents/data_fetcher/src/: lib.rs  main.rs
backend/agents/go_agent_template/: Dockerfile  main.go
backend/agents/python_agent_template/: Dockerfile
backend/agents/python_agent_template/src/: agent.py
backend/agents/rust_agent_template/: Dockerfile
backend/agents/rust_agent_template/src/: main.rs
backend/agents/scraper/: Dockerfile  go.mod  main.go
backend/kafka/: consumer.py  producer.py
backend/orchestrator/: Dockerfile  Dockerfile.dev  pyproject.toml
backend/orchestrator/src/: __init__.py  ai_agent.py  config.py  hitl.py  langgraph_orchestrator.py  main.py  routes.py  tasks.py  utils.py
backend/orchestrator/src/utils/: s3_client.py
config/env/: .env.example
database/: schema.sql
docs/: architecture.md  architecture.txt  doppler-setup.md
frontend/: Dockerfile  Dockerfile.dev  package.json
frontend/pages/: index.js
frontend/pages/api/: health.js
infra/: README.md
infra/argocd/: application.yaml
infra/ci-cd/: github-actions.yaml
infra/k8s/: aws-secret.yaml
infra/kubernetes/: doppler-operator.yaml  frontend-deployment.yaml  kafka-deployment.yaml  orchestrator-deployment.yaml  postgres-deployment.yaml  secrets.yaml
k8s/: README.md
k8s/argocd/: README.md  atheon-ai-appset.yaml  atheon-ai-project.yaml  orchestrator-app.yaml
k8s/base/: data-fetcher-deployment.yaml  kafka-deployment.yaml  kustomization.yaml  namespace.yaml  orchestrator-deployment.yaml  postgres-deployment.yaml  redis-deployment.yaml  scraper-deployment.yaml
k8s/base/configmaps/: app-config.yaml
k8s/base/deployments/: orchestrator-deployment.yaml  scraper-deployment.yaml
k8s/base/network-policies/: agents-network-policy.yaml  default-deny.yaml  frontend-network-policy.yaml  orchestrator-network-policy.yaml
k8s/base/services/: orchestrator-service.yaml  scraper-service.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/dev/patches/: replicas.yaml  resources.yaml
k8s/overlays/dev/secrets/: atheon-secrets.env.example  postgres-secrets.env.example
k8s/overlays/development/: kustomization.yaml
k8s/overlays/development/patches/: replicas-patch.yaml  resources-patch.yaml
k8s/overlays/prod/: .gitignore  README.md  kustomization.yaml
k8s/overlays/prod/patches/: hpa.yaml  replicas.yaml  resources.yaml
k8s/overlays/prod/secrets/: atheon-secrets.env.example  postgres-secrets.env.example
k8s/overlays/production/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
scripts/: build-frontend.sh  deploy-doppler-k8s.sh  doppler-run.sh  run-backend.sh
(+6 files in other folders)
