[tool.poetry]
name = "atheon-orchestrator"
version = "0.1.0"
description = "Vertical Agent for Atheon AI - Task Orchestration and HITL Management"
authors = ["Atheon AI Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
langgraph = "^0.0.19"
humanlayer = "^0.1.0"
asyncio = "^3.4.3"
kafka-python = "^2.0.2"
anthropic = "^0.5.0"
openai = "^1.1.1"
loguru = "^0.7.2"
prometheus-client = "^0.17.1"
sqlalchemy = "^2.0.22"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
trulens = "^0.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.6.1"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true