[package]
name = "atheon-data-fetcher"
version = "0.1.0"
edition = "2021"
authors = ["Atheon AI Team <info@atheon.ai>"]
description = "Data fetching agent for Atheon AI platform"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
rskafka = "0.3.1"
anyhow = "1.0.75"
thiserror = "1.0.48"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
async-trait = "0.1.73"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"

[dev-dependencies]
tokio-test = "0.4.3"
mockito = "1.2.0"